corrected alignments and font size

--- a/my-website/css/expt.css
+++ b/my-website/css/expt.css
@@ -254,12 +254,15 @@ transition-timing-function:cubic-bezier(0.51,-0.47, 0.27, 1.55);
 
 @media screen and (max-width:756px){
     .block-2 p{
-        font-size: 15px;
-        line-height: 1.5;
+        font-size: 10px;
+        line-height: 1.1;
+        letter-spacing: 0.1rem;
     }
     .title-2 {
         font-size: 30px;
         padding-left: 20%;
+        position: relative;
+        left:35px;
       }
 }
 
@@ -467,7 +470,7 @@ transition-timing-function:cubic-bezier(0.51,-0.47, 0.27, 1.55);
 }
 @media screen and (max-width:400px){
     .li-blk li{
-        margin-top: 20%;
+        margin-top: 22%;
     }
 }
 @-o-viewport{
